se modifico la seccion mis comidas favoritas

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
+        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis Comidas Favoritas</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
@@ -116,9 +116,6 @@
                             repudiandae neque rem adipisci repellendus libero illo quo
                             blanditiis, velit quasi ad, recusandae voluptates officia.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
-                            Ver más
-                        </button>
                     </div>
                 </div>
             </div>
@@ -133,9 +130,6 @@
                             consequatur quos error fuga excepturi quo. Laudantium optio
                             pariatur laboriosam modi, ea molestias?
                         </p>
-                        <button type="button" class="btn btn-outline-info">
-                            Ver más
-                        </button>
                     </div>
                 </div>
             </div>
@@ -150,9 +144,6 @@
                             corporis facilis qui architecto dolor, accusamus eveniet
                             exercitationem fugit. Quod autem neque ducimus.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
-                            Ver más
-                        </button>
                     </div>
                 </div>
             </div>
