--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/img/Free_Sample_By_Wix.jpeg" class="img-fluid">
+                <img src="assets/img/Free_Sample_By_Wix.jpeg" alt="Logotipo que dice Moises Valdebenito en color blanco" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -193,7 +193,7 @@
 
 
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+        <p class="mb-0">Moises Valdebenito 2022. Todos los derechos reservados.</p>
     </footer>
 
 
